--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -40,6 +40,8 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
+          git remote set-url origin https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }}.git
+
           git add artifacts/
 
           if ! git diff --cached --quiet; then
